src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --rosewater: hsl(10.79 58% 66%);
    --flamingo: hsl(0 59% 66%);
    --pink: hsl(316.03 73% 69%);
    --mauve: hsl(266.04 85% 58%);
    --red: hsl(347.07 86% 44%);
    --maroon: hsl(354.78 76% 58%);
    --peach: hsl(21.97 99% 51%);
    --yellow: hsl(34.94 76% 49%);
    --green: hsl(109.23 57% 39%);
    --teal: hsl(183.23 73% 34%);
    --sky: hsl(197.06 96% 45%);
    --sapphire: hsl(188.85 69% 41%);
    --blue: hsl(219.9 91% 53%);
    --lavender: hsl(230.93 97% 71%);
    --text: hsl(233.79 16% 35%);
    --subtext1: hsl(233.33 12% 41%);
    --subtext0: hsl(232.79 10% 47%);
    --overlay2: hsl(232.17 09% 53%);
    --overlay1: hsl(231.42 10% 59%);
    --overlay0: hsl(228 11% 65%);
    --surface2: hsl(226.66 12% 70%);
    --surface1: hsl(225 13% 76%);
    --surface0: hsl(222.85 15% 82%);
    --base: hsl(220 23% 94%);
    --mantle: hsl(220 21% 91%);
    --crust: hsl(220 20% 88%);

    --background: var(--crust);
    --foreground: var(--text);
    --card: var(--base);
    --card-foreground: var(--text);
    --popover: var(--base);
    --popover-foreground: var(--text);
    --primary: var(--peach);
    --primary-foreground: var(--base);
    --secondary: var(--surface0);
    --secondary-foreground: var(--subtext1);
    --muted: var(--crust);
    --muted-foreground: var(--subtext0);
    --accent: var(--crust);
    --accent-foreground: var(--text);
    --destructive: var(--red);
    --destructive-foreground: var(--base);
    --info: var(--blue);
    --info-foreground: var(--base);
    --success: var(--green);
    --success-foreground: var(--base);
    --warning: var(--yellow);
    --warning-foreground: var(--base);
    --border: var(--crust);
    --input: var(--surface0);
    --ring: var(--primary);
    --chart-1: var(--mauve);
    --chart-2: var(--yellow);
    --chart-3: var(--green);
    --chart-4: var(--pink);
    --chart-5: var(--marron);
    --radius: 0.75rem;
    --sidebar: var(--mantle);
    --sidebar-foreground: var(--text);
    --sidebar-primary: var(--primary);
    --sidebar-primary-foreground: var(--primary-foreground);
    --sidebar-accent: var(--accent);
    --sidebar-accent-foreground: var(--accent-foreground);
    --sidebar-border: var(--border);
    --sidebar-ring: var(--ring);
  }

  .dark {
    --rosewater: hsl(10.28 57% 88%);
    --flamingo: hsl(0 58% 83%);
    --pink: hsl(316 73% 83%);
    --mauve: hsl(276.66 59% 76%);
    --red: hsl(358.81 67% 70%);
    --maroon: hsl(57.77 65% 75%);
    --peach: hsl(20.33 79% 70%);
    --yellow: hsl(39.52 62% 73%);
    --green: hsl(95.83 43% 67%);
    --teal: hsl(171.54 39% 64%);
    --sky: hsl(189.09 47% 72%);
    --sapphire: hsl(198.62 55% 69%);
    --blue: hsl(221.63 74% 74%);
    --lavender: hsl(238.9 66% 83%);
    --text: hsl(227.23 70% 86%);
    --subtext1: hsl(226.66 43% 79%);
    --subtext0: hsl(228.29 29% 72%);
    --overlay2: hsl(227.69 22% 65%);
    --overlay1: hsl(226.66 16% 58%);
    --overlay0: hsl(229.09 13% 51%);
    --surface2: hsl(228 13% 44%);
    --surface1: hsl(227.14 14% 37%);
    --surface0: hsl(230 15% 30%);
    --base: hsl(229.09 18% 23%);
    --mantle: hsl(230.52 18% 19%);
    --crust: hsl(229.41 19% 17%);

    --background: var(--base);
    --foreground: var(--text);
    --card: var(--crust);
    --card-foreground: var(--text);
    --popover: var(--crust);
    --popover-foreground: var(--text);
    --primary: var(--peach);
    --primary-foreground: var(--base);
    --secondary: var(--surface0);
    --secondary-foreground: var(--text);
    --muted: var(--surface0);
    --muted-foreground: var(--overlay1);
    --accent: var(--surface0);
    --accent-foreground: var(--text);
    --destructive: var(--red);
    --destructive-foreground: var(--base);
    --info: var(--blue);
    --info-foreground: var(--base);
    --success: var(--green);
    --success-foreground: var(--base);
    --warning: var(--yellow);
    --warning-foreground: var(--base);
    --border: var(--base);
    --input: var(--surface0);
    --ring: var(--primary);
    --chart-1: var(--mauve);
    --chart-2: var(--yellow);
    --chart-3: var(--green);
    --chart-4: var(--pink);
    --chart-5: var(--marron);
    --radius: 0.75rem;
    --sidebar: var(--mantle);
    --sidebar-foreground: var(--text);
    --sidebar-primary: var(--primary);
    --sidebar-primary-foreground: var(--primary-foreground);
    --sidebar-accent: var(--accent);
    --sidebar-accent-foreground: var(--accent-foreground);
    --sidebar-border: var(--border);
    --sidebar-ring: var(--ring);
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }
}

